projects/maison/src/apps/paperless-ngx/policies/allow-egress-from-paperless-to-internet.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows egress traffic from Paperless to POP/IMAP server
      on internet.

      **Why?**
      - Paperless needs to connect to the POP/IMAP server to fetch emails
        and process them (gmail in this case).
  name: allow-egress-from-paperless-to-internet
  namespace: paperless-ngx
spec:
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 993 # required for the email
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx-webserver
      app.kubernetes.io/name: paperless-ngx
  policyTypes:
    - Egress
