projects/maison/src/apps/paperless-ngx/policies/allow-egress-from-paperless-to-postgress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows egress traffic from Paperless to Postgres database.

      **Why?**
      - Paperless needs to connect to the Postgres database as data backend.
  name: allow-egress-from-paperless-to-postgress
  namespace: paperless-ngx
spec:
  egress:
    - to:
        - podSelector:
            matchLabels:
              cnpg.io/cluster: paperless-ngx-database
      ports:
        - port: 5432
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx-webserver
      app.kubernetes.io/name: paperless-ngx
  policyTypes:
    - Egress
