projects/maison/src/apps/paperless-ngx/policies/allow-ingress-to-paperless-from-n8n.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows ingress traffic from n8n application to
      Paperless.

      **Why?**
      - n8n host some AI agent that needs to connect to Paperless
        to fetch documents and process them.
  name: allow-ingress-to-paperless-from-n8n
  namespace: paperless-ngx
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: n8n
          podSelector:
            matchLabels:
              app.kubernetes.io/name: n8n
      ports:
        - port: 8000
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx-webserver
      app.kubernetes.io/name: paperless-ngx
  policyTypes:
    - Ingress
