projects/maison/src/apps/paperless-ngx/policies/allow-ingress-to-paperless-from-traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows ingress traffic from Paperless application to
      Traefik service.

      **Why?**
      - Traefik is the gateway controller for the Kubernetes cluster
        and needs to route traffic to Paperless application.
  name: allow-ingress-to-paperless-from-traefik
  namespace: paperless-ngx
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
      ports:
        - port: 8000
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx-webserver
      app.kubernetes.io/name: paperless-ngx
  policyTypes:
    - Ingress
