projects/maison/src/apps/paperless-ngx/policies/allow-ingress-to-redis-from-paperless.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations:
    network-policy.k8s.io/description: |
      This policy allows ingress traffic from Paperless to Redis broker.

      **Why?**
      - Paperless needs to connect to the Redis database as event broker.
  name: allow-ingress-to-redis-from-paperless
  namespace: paperless-ngx
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/instance: paperless-ngx-webserver
              app.kubernetes.io/name: paperless-ngx
      ports:
        - port: 6379
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless-ngx-redis
      app.kubernetes.io/name: paperless-ngx
  policyTypes:
    - Ingress
